# robotics-ros2

./: CP_Template.java  Ros2Notes.md
my_cpp_pkg/: CMakeLists.txt  package.xml
my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  calci_add_node.cpp  calci_divide_node.cpp  calci_multiply_node.cpp  calci_subtract_node.cpp  factorial.cpp  full_calci.cpp  input_num.cpp  my_first_node.cpp  output_num.cpp  robot_news.cpp  smartphone.cpp
my_py_pkg/: package.xml  setup.cfg  setup.py
my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  my_first_node.py  robot_news_station.py
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/msg/: HardwareStatus.msg
